---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: ????
  Changes:
    - Updated to Factorio 2.0.
---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2023-05-09
  Bugfixes:
    - Fixed end points simulation blueprint corruption
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2023-05-09
  Bugfixes:
    - Fixed messy duct collision boxes causing buildability issues (#14)
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 2023-05-08
  Bugfixes:
    - Fixed that underground pipes could connect to ducts in certain situations (#13)
    - Fixed that underground ducts would not connect if regular ducts were placed between them (#6)
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2023-04-29
  Changes:
    - Removed blue fluidbox arrows from ducts (#11)
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2022-03-12
  Compatibility:
    - [Space Exploration] Moved duct items to the pipe subgroup (#5)
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2022-01-03
  Features:
    - Added tips and tricks with simulations
    - Ducts can be connected to the circuit network to read their contents
  Changes:
    - Connecting regular pipes directly to ducts is now entirely impossible, and the setting has been removed
    - Improved circuit connector positioning
    - Placing regular or long duct ghosts will no longer replace them with small ducts - bots will place the larger ducts directly
    - Removed base area and health multiplier options