@@ -1,3 +1,4 @@
 return {
   volume = 400,
+  extent = 1000,
 }
