@@ -50,6 +50,7 @@ data:extend({
         { direction = defines.direction.south, connection_category_bitmask = 2, position = { 0, 0.25 } },
       },
       hide_connection_info = true,
+      max_pipeline_extent = constants.extent,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
@@ -176,6 +177,7 @@ data:extend({
         { direction = defines.direction.south, connection_category_bitmask = 2, position = { 0, 0.5 } },
       },
       hide_connection_info = true,
+      max_pipeline_extent = constants.extent,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
@@ -293,6 +295,7 @@ data:extend({
         { direction = defines.direction.south, connection_category_bitmask = 2, position = { 0, 1.5 } },
       },
       hide_connection_info = true,
+      max_pipeline_extent = constants.extent,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
@@ -412,6 +415,7 @@ data:extend({
         { direction = defines.direction.west, connection_category_bitmask = 2, position = { -0.5, 0 } },
       },
       hide_connection_info = true,
+      max_pipeline_extent = constants.extent,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
@@ -530,6 +534,7 @@ data:extend({
         { direction = defines.direction.west, connection_category_bitmask = 2, position = { -0.5, 0 } },
       },
       hide_connection_info = true,
+      max_pipeline_extent = constants.extent,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
@@ -650,6 +655,7 @@ data:extend({
         { direction = defines.direction.west, connection_category_bitmask = 2, position = { -0.5, 0 } },
       },
       hide_connection_info = true,
+      max_pipeline_extent = constants.extent,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
@@ -771,6 +777,7 @@ data:extend({
           max_underground_distance = settings.startup["fmf-underground-duct-max-length"].value,
         },
       },
+      max_pipeline_extent = constants.extent,
     },
     underground_sprite = {
       filename = "__core__/graphics/arrows/underground-lines.png",
