@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: ????
+  Features:
+    - Ducts have a max pipeline extent of 1 kilometer.
   Changes:
     - Updated to Factorio 2.0.
 ---------------------------------------------------------------------------------------------------
